<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Candra Ibra Sanie on 11/19/19 7:34 AM
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 11/19/19 7:34 AM
  ~  */
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.florent37.arclayout.ArcLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:elevation="10dip"
            app:arc_cropDirection="cropOutside"
            app:arc_height="50dp"
            app:arc_position="bottom">

            <!--            <com.flaviofaria.kenburnsview.KenBurnsView-->
            <!--                android:id="@+id/img_poster"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:scaleType="fitXY"-->
            <!--                tools:src="@drawable/poster_gotham" />-->
            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                tools:src="@drawable/poster_gotham" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/roundedcorner"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </com.github.florent37.arclayout.ArcLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="275dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_favorite_border"
            app:backgroundTint="@color/colorAccent"
            app:elevation="15dp"
            app:fabSize="normal"
            tools:ignore="RelativeOverlap" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diagonalLayout"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:fontFamily="sans-serif"
                android:textColor="#979696"
                android:textSize="15sp"
                tools:text="@string/desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/desc"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:fontFamily="sans-serif"
                android:textColor="#979696"
                android:textSize="15sp"
                tools:text="@string/lorem" />

        </LinearLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            app:shimmer_auto_start="true"
            app:shimmer_duration="1000">

            <include layout="@layout/layout_shimmer_detail" />

        </com.facebook.shimmer.ShimmerFrameLayout>


    </RelativeLayout>


</ScrollView>